# agent-backend

./: .env.example  .gitignore  .mprocs.md  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  READY-TO-TEST.md  SAFEGUARD-VERIFICATION.sh  SPEC.md  TEST-INFRASTRUCTURE.md  TESTING-PLAN.md  UNIT-TEST-SAFEGUARDS.md  manage.sh  mprocs.remote.yaml  mprocs.yaml  opensdd.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_results.txt
.cursor/rules/: opensdd-spec-format.md  sdd-generate.md  sdd-manager.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/instructions/: opensdd-spec-format.instructions.md  sdd-generate.instructions.md  sdd-manager.instructions.md
.github/workflows/: ci.yml  publish-agentbe-daemon.yml  publish-remote-backend.yml  publish.yml
agentbe-server/: package.json  vitest.config.ts
constellation-typescript/: package.json  vitest.config.ts  vitest.integration.config.ts
daemon/: README.md  cloudbuild.yaml
daemon/deploy-tool/: package.json  server.js
daemon/docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
daemon/scripts/: azure-vm-startup.sh  gcp-vm-startup.sh
docs/: agentbe-daemon.md  ai-sdk.md  architecture.md  connection-pooling.md  conventions.md  filepaths.md  mermaid-style-guide.md  performance.md  security.md  typescript.md
examples/: README.md
examples/NextJS/: .env.example  .gitignore  CLAUDE.md  README.md  next.config.js  next.config.ts  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
examples/PyBasic/: README.md  chat.py  main.py  pyproject.toml
examples/TSBasic/: README.md  chat.ts  index.ts  package.json
examples/web-demo/: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  run.sh
opensdd/: clients.md  daemon.md  safety.md  spec.md
python/: README.md  pyproject.toml
python/agent_backend/: __init__.py
python/agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/agent_backend/adapters/: vercel.py
python/agent_backend/backends/: remote.py
python/agent_backend/backends/transports/: websocket_ssh.py
python/agent_backend/mcp_integration/: client.py
python/tests/: __init__.py  test_path_validation.py  test_remote_backend.py  test_version.py
remote/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
remote/deploy/: README.md
remote/src/: index.ts
typescript/: .npmignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
typescript/archive/: BackendFactory.ts  Config.ts  FileSystem.ts  FileSystemPoolManager.test.ts  FileSystemPoolManager.ts  LocalBackend.ts  LocalWorkspace.ts  LocalWorkspaceUtils.ts  RemoteBackend.ts  RemoteWorkspace.ts  RemoteWorkspaceUtils.ts  Workspace.ts
typescript/deploy/: README.md  cloudbuild.yaml
typescript/src/: BackendPoolManager.ts  cli.ts  constants.ts  index.ts  safety.ts  types.ts  typing.ts
(+150 files in other folders)
