[project]
name = "agent-backend"
version = "0.9.0"
description = "A distributed, scalable filesystem backend for deep AI agents, backed by blob storage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Backend Contributors" }]
keywords = ["ai", "agents", "backend", "filesystem", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "websockets>=14.0",
    "asyncssh>=2.17.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "twine>=6.0.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = ["integration: marks tests as integration tests (require Docker)"]

[tool.coverage.run]
omit = [
    "agent_backend/backends/remote.py",
    "agent_backend/backends/transports/websocket_ssh.py",
    "agent_backend/mcp_integration/client.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["agent_backend"]
